--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <div class="btn">
             <button class="button"><a href="pg1.html">Continuar</a></button>
-            <button type="button" onclick="window.close()"></button>
+            <button type="button" onclick="window.close()">Sair</button>
         </div>
 
         <div class="creditos">
