--- a/pg1.html
+++ b/pg1.html
@@ -9,7 +9,7 @@
             <p>ONDE JESUS NASCEU?</p>        
         </DIv>
         <div class="resposta">
-            <button class="respota1"><a href="index.html"></a></button>
+            <button class="respota1"><a href="index.html">Carfanaum</a></button>
             <button class="resposta2"><a href="index.html">Jordania</button>
             <button class="resposta3"><a href="pg2.html">Belem</a></button>
         </div>
