--- a/pgfinal.html
+++ b/pgfinal.html
@@ -6,6 +6,7 @@
     </head>
     <BOdy>
         <div class="img">
+            <img src="img/WhatsApp Image 2024-03-05 at 18.05.57.jpeg" alt="">
 
         </div>
         
